--- a/src/scss/basicStyles/_typeface.scss
+++ b/src/scss/basicStyles/_typeface.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,600');
 @import url('https://fonts.googleapis.com/css?family=Advent+Pro:200,300,400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
 
 $rale: 'Raleway', sans-serif;
 $advent: 'Advent Pro', sans-serif;
+$lato: 'Lato', sans-serif;
