hamburger menu complete and lots of styles added

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,7 @@
 @import 'basicStyles/colors';
 @import 'basicStyles/typeface';
 
+@import 'layout/hamburger-menu';
 @import 'layout/home-page';
+@import 'layout/projects';
 @import 'layout/work-page';
