static code into react components

--- a/src/scss/basicStyles/_colors.scss
+++ b/src/scss/basicStyles/_colors.scss
@@ -4,3 +4,5 @@ $fontGrey: #3F3F3F;
 $white: #FAFBFB;
 $bgLightGrey: #A8A6A6;
 $dark: #212121;
+$lightBlueGreen: #7DBCC1;
+$mediumBlueGreen: #089BA6;
